# edgebert

./: .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.sh  build.rs  index.html  index.js  large_text_benchmark.rs
benches/: comparison.rs
crates-internal/edgebert/: Cargo.toml
crates-internal/edgebert/examples/: basic.rs  load.rs  rerank.rs  similarity.rs  worker.js
crates-internal/edgebert/src/: lib.rs  weights.rs
crates-internal/edgebert/src/model/: base.rs  bert.rs  bi_encoder.rs  cross_encoder.rs  mod.rs
crates-internal/edgemodels/: Cargo.toml
crates-internal/edgemodels/examples/: bartsummarize.rs  basic.rs  bert_embedding.rs  gpt2_generation.rs  gpt2basic.rs  gpt2streaminggeneration.rs  load.py  load.rs  rerank.rs  similarity.py  similarity.rs
crates-internal/edgemodels/src/: bertconfig.rs  bertweights.rs  config.rs  generation.rs  gptweights.rs  lib.rs  tests.rs  weights.rs
crates-internal/edgemodels/src/bert/: config.rs  mod.rs
crates-internal/edgemodels/src/gpt2/: config.rs  mod.rs
crates-internal/edgemodels/src/model/: bart.rs  bert.rs  bertbase.rs  bi_encoder.rs  cross_encoder.rs  distilgpt2.rs  generative.rs  gpt2.rs  gptbase.rs  mod.rs
crates-internal/edgemodels/src/roberta/: config.rs  mod.rs
crates-internal/edgesearch/: Cargo.toml
crates-internal/edgetransformers/: Cargo.toml
crates-internal/edgetransformers/src/: activations.rs  attention.rs  bind_group.rs  cache.rs  embeddings.rs  feedforward.rs  gpu_pipeline.rs  layer_norm.rs  lib.rs  model_type.rs  prelude.rs  traits.rs  weights.rs  wgpu_context.rs  wgpu_ops.rs
crates-internal/edgetransformers/src/decoder/: cpu.rs  gpu.rs  mod.rs
crates-internal/edgetransformers/src/encoder/: cpu.rs  gpu.rs  mod.rs
crates-internal/edgetransformers/src/gpu_ops/: common.rs  mod.rs
crates-internal/edgetransformers/src/gpu_ops/add/: mod.rs  tests.rs
crates-internal/edgetransformers/src/gpu_ops/add_bias/: mod.rs  tests.rs
crates-internal/edgetransformers/src/gpu_ops/apply_mask/: apply_mask.wgsl  mod.rs  tests.rs
crates-internal/edgetransformers/src/gpu_ops/ffn/: mod.rs  tests.rs
crates-internal/edgetransformers/src/gpu_ops/layer_norm/: mod.rs  tests.rs
crates-internal/edgetransformers/src/gpu_ops/matmul/: bmm.wgsl  matmul_tiled.wgsl  mod.rs  tests.rs
crates-internal/edgetransformers/src/gpu_ops/reshape/: mod.rs  tests.rs
crates-internal/edgetransformers/src/gpu_ops/softmax/: mod.rs  tests.rs
crates-internal/edgetransformers/src/shaders/: ffn.wgsl  matmul.wgsl
crates-internal/edgetransformers/src/utils/: linear_algebra.rs  masks.rs  mod.rs
crates/edgegpt/: Cargo.toml
crates/edgegpt/src/: lib.rs
edgebert/: Cargo.toml
edgebert/examples/: basic.rs  load.rs
edgebert/src/model/: bi_encoder.rs  mod.rs
edgebert/src/tokenizer/: mod.rs  wasm.rs
edgebert/src/wasm/: mod.rs
edgegpt/: Cargo.toml
edgegpt/examples/: basic.rs  summarize.rs
edgegpt/src/: generation.rs
edgegpt/src/model/: bart.rs  mod.rs
edgerag/: Cargo.toml
edgerag/examples/: rag_basic.rs  rag_hybrid.rs  rag_streaming.rs  wasm_example.js
edgetransformers/: Cargo.toml
edgetransformers/src/: activations.rs  attention.rs  feedforward.rs  layer_norm.rs  lib.rs  wgpu_context.rs  wgpu_ops.rs
edgetransformers/src/utils/: linear_algebra.rs
examples/: basic.html  basic.rs  load.rs  similarity.py  similarity.rs  worker.html  worker.js
pkg/: index.js  worker.js
scripts/: build-docker.sh  run-docker.sh  wasm-build.sh
src/: lib.rs  main.rs  tokenizer.rs  weights.rs
