[package]
name = "edgebert"
version = "0.3.0"
edition = "2024"
authors = ["Ólafur Aron Jóhannsson <olafurjohannss@gmail.com>"]
description = "Fast local text embeddings library for Rust and WASM for BERT inference on native and edge devices with no dependencies."
repository = "https://github.com/olafurjohannssson/edgebert"
license = "MIT"
keywords = ["bert", "nlp", "wasm", "transformer", "embeddings"]
categories = ["wasm", "text-processing", "encoding"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
safetensors = "0.6.2"
wasm-bindgen = "0.2.100"
reqwest = {  version = "0.12.23", features = ["blocking"] }



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
rayon = "1.11.0"
dirs = "6.0.0"
ndarray = { version = "0.16", features = ["blas", "rayon", "matrixmultiply-threading"] }
matrixmultiply = { version = "0.3", features = ["threading", "num_cpus", "cgemm"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[lib]
crate-type = ["cdylib", "rlib"] 

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
pkg-config = "0.3"



[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
ndarray = "0.16.1"
futures = "0.3.31"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[profile.dev-opt]
inherits = "dev"
opt-level = 2


[package.metadata.wasm-pack.profile.release]
wasm-opt = false