[package]
name = "edgegpt"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "EdgeGPT: The SQLite of AI. A fast, small-footprint, dependency-free toolkit. Making edge and browser AI a first class citizen, but also works native cross-platform"

[dependencies]
anyhow.workspace = true


edgetransformers = { path = "../../crates-internal/edgetransformers", optional = true }
edgebert = { path = "../../crates-internal/edgebert", optional = true }
edgesearch = { path = "../../crates-internal/edgesearch", optional = true }

# GPU dependencies
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

[features]
default = ["bert-cpu"]


bert-cpu = ["edgetransformers", "edgebert"]
bert-gpu = ["bert-cpu", "wgpu"] # The GPU feature builds on the CPU feature
search = ["bert-cpu", "edgesearch"]


# summarization-cpu = ["edgetransformers", "edgebart"]
# summarization-gpu = ["summarization-cpu", "wgpu"]